bk_ida/gccida/c1/subst_constants
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/integrate.c:2942:6: error: use of undeclared identifier 'v13'; did you mean 'v12'?
rtx *v13; // rbp 
     ^~~
     v12
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/integrate.c:2941:15: note: 'v12' declared here
unsigned int *v12; // rax 
              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/integrate.c:2942:5: error: invalid operands to binary expression ('struct rtx_def *' and 'unsigned int *')
rtx *v13; // rbp 
~~~ ^~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/integrate.c:2944:4: error: expected ';' after expression
rtx v15; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/integrate.c:2944:5: error: use of undeclared identifier 'v15'
rtx v15; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/integrate.c:2947:6: error: use of undeclared identifier 'rtwint'; did you mean 'rewind'?
rtx *rtwint; // rdi 
     ^~~~~~
     rewind
/usr/include/stdio.h:694:13: note: 'rewind' declared here
extern void rewind (FILE *__stream);
            ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/integrate.c:2947:5: error: invalid operands to binary expression ('struct rtx_def *' and 'void (FILE *)' (aka 'void (struct _IO_FILE *)'))
rtx *rtwint; // rdi 
~~~ ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/integrate.c:2953:4: error: expected ';' after expression
rtx v24; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/integrate.c:2953:5: error: use of undeclared identifier 'v24'
rtx v24; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/integrate.c:2959:4: error: expected ';' after expression
rtx v30; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/integrate.c:2959:5: error: use of undeclared identifier 'v30'; did you mean 'v20'?
rtx v30; // rax 
    ^~~
    v20
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/integrate.c:2949:14: note: 'v20' declared here
unsigned int v20; // eax 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/integrate.c:2961:6: error: use of undeclared identifier 'v32'
rtx *v32; // rsi 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/integrate.c:2970:6: error: use of undeclared identifier 'v41'
rtx *v41; // r12 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/integrate.c:2980:4: error: expected ';' after expression
rtx v51; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/integrate.c:2980:5: error: use of undeclared identifier 'v51'
rtx v51; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/integrate.c:2983:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v54; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/integrate.c:2990:4: error: expected ';' after expression
rtx v62; // [rsp+10h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/integrate.c:2990:5: error: use of undeclared identifier 'v62'
rtx v62; // [rsp+10h] [rbp-68h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/integrate.c:2991:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v63; // [rsp+10h] [rbp-68h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/integrate.c:2992:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+20h] [rbp-58h] 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/subst_constants/src/obj/integrate.o] Error 1
